# GSVirtualMachine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.gsvm
include/ArgumentsParser/: CMakeLists.txt  GS_Arguments.h
include/CrossPlatform/: CMakeLists.txt  GS_ClassUtilities.h  GS_CrossPlatform.h  GS_PlatformDefines.h  GS_PlatformTypes.h
include/Debug/: CMakeLists.txt  GS_Debug.h  GS_Timer.h  GS_TimerBase.h  GS_TimerResults.h
include/Exceptions/: GS_ArgumentException.h  GS_CompilingException.h  GS_Exception.h  GS_IException.h  GS_LexerException.h  GS_NewLineException.h  GS_NotSupportedException.h  GS_ParserException.h  GS_ReaderException.h
include/Reader/: CMakeLists.txt  GS_Reader.h
include/Runtime/: CMakeLists.txt  GS_Decoder.h  GS_Flag.h  GS_Opcode.h  GS_Register.h  GS_Runtime.h  GS_Stack.h  GS_TablesOfSymbols.h  GS_VM.h  GS_VMImageDecoder.h  GS_VMTables.h
include/Starter/: CMakeLists.txt  GS_Starter.h
include/VirtualMachine/Lexer/: CMakeLists.txt  GS_Coordinate.h  GS_Keywords.h  GS_Lexer.h  GS_Position.h  GS_Regex.h  GS_Token.h
include/VirtualMachine/Parser/: CMakeLists.txt  GS_IncludeExpressions.h  GS_IncludeStatements.h  GS_IncludeValues.h  GS_Parser.h
include/VirtualMachine/Parser/Expressions/: GS_Expression.h  GS_UnaryExpression.h  GS_VaLueExpression.h
include/VirtualMachine/Parser/Statements/: GS_AddStatement.h  GS_GetStatement.h  GS_JmpStatement.h  GS_JnzStatement.h  GS_JzStatement.h  GS_LtStatement.h  GS_PopStatement.h  GS_PushStatement.h  GS_ReserveStatement.h  GS_SaveStatement.h  GS_Statement.h  GS_StatementTypes.h  GS_SubStatement.h
include/VirtualMachine/Parser/Values/: GS_IntegerValue.h  GS_Value.h  LiteralTypes.h
include/VirtualMachine/Reader/: CMakeLists.txt  GS_Reader.h
include/VirtualMachine/Runtime/: CMakeLists.txt  GS_Runtime.h  GS_Stack.h  GS_TableOfSymbols.h
include/VirtualMachine/Util/: CMakeLists.txt  GS_Arguments.h  GS_CrossPlatform.h  GS_PlatformDefines.h  GS_PlatformTypes.h
src/ArgumentsParser/: GS_Arguments.cpp
src/CrossPlatform/: GS_CrossPlatform.cpp
src/Debug/: GS_Debug.cpp
src/Reader/: GS_Reader.cpp
src/Runtime/: GS_Decoder.cpp  GS_Flag.cpp  GS_Opcode.cpp  GS_Register.cpp  GS_Runtime.cpp  GS_Stack.cpp  GS_TablesOfSymbols.cpp  GS_VMImageDecoder.cpp  GS_VMTables.cpp
src/Starter/: GS_Starter.cpp
src/VirtualMachine/Lexer/: GS_Coordinate.cpp  GS_Keywords.cpp  GS_Lexer.cpp  GS_Position.cpp  GS_Regex.cpp  GS_Token.cpp
src/VirtualMachine/Parser/: GS_CommandParser.cpp  GS_ExpressionParser.cpp  GS_Parser.cpp
src/VirtualMachine/Parser/Expressions/: GS_ValueExpression.cpp
src/VirtualMachine/Parser/Statements/: GS_AddStatement.cpp  GS_GetStatement.cpp  GS_JmpStatement.cpp  GS_JnzStatement.cpp  GS_JzStatement.cpp  GS_LtStatement.cpp  GS_PopStatement.cpp  GS_PushStatement.cpp  GS_ReserveStatement.cpp  GS_SaveStatement.cpp  GS_SubStatement.cpp
src/VirtualMachine/Parser/Values/: GS_IntegerValue.cpp  GS_LiteralTypes.cpp
src/VirtualMachine/Reader/: GS_Reader.cpp
src/VirtualMachine/Runtime/: GS_Runtime.cpp  GS_Stack.cpp  GS_TableOfSymbols.cpp
src/VirtualMachine/Util/: GS_Arguments.cpp  GS_CrossPlatform.cpp
